tests/paczka1/small_fuzzy/90710421.err
Error in line 1: NUtPnc S455 8,3
Error in line 7: a5wJoB S419 45,9
Error in line 2: eDj S419 12,2
Error in line 8: NUtPnc S455 30,4
